chor: modify build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: setup cross compiler
         run: sudo apt-get install -y gcc-arm-none-eabi cmake make ninja-build
