docs: add docs using sphinx and hosting on readthedocs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,6 @@
     "[makefile]": {
         "editor.insertSpaces": false,
         "editor.tabSize": 8
-    }
+    },
+    "iis.configDir": ""
 }
