--- a/.config
+++ b/.config
@@ -147,7 +147,13 @@ CONFIG_RT_USING_ADC=y
 # CONFIG_RT_USING_FDT is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
-# CONFIG_RT_USING_SPI is not set
+CONFIG_RT_USING_SPI=y
+# CONFIG_RT_USING_SPI_BITOPS is not set
+# CONFIG_RT_USING_QSPI is not set
+# CONFIG_RT_USING_SPI_MSD is not set
+# CONFIG_RT_USING_SFUD is not set
+# CONFIG_RT_USING_ENC28J60 is not set
+# CONFIG_RT_USING_SPI_WIFI is not set
 CONFIG_RT_USING_WDT=y
 # CONFIG_RT_USING_AUDIO is not set
 # CONFIG_RT_USING_SENSOR is not set
@@ -1116,7 +1122,7 @@ CONFIG_BSP_USING_ADC0=y
 # CONFIG_BSP_USING_ADC1 is not set
 # CONFIG_BSP_USING_ADC2 is not set
 CONFIG_BSP_USING_TIM=y
-# CONFIG_BSP_USING_HWTIMER0 is not set
+CONFIG_BSP_USING_HWTIMER0=y
 CONFIG_BSP_USING_HWTIMER1=y
 CONFIG_BSP_USING_HWTIMER2=y
 CONFIG_BSP_USING_HWTIMER3=y
