--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,10 @@
         "lms.h": "c",
         "lmsuart.h": "c",
         "drv_spi.h": "c",
-        "spi_driver.h": "c"
+        "spi_driver.h": "c",
+        "oled_driver.h": "c",
+        "key_function.h": "c",
+        "random": "c"
     },
     "editor.formatOnSave": true,
     "files.trimFinalNewlines": true, // 删除文件末尾多余的空行
