--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,7 @@
     "editor.formatOnSave": true,
     "files.trimFinalNewlines": true, // 删除文件末尾多余的空行
     "files.trimTrailingWhitespace": true, // 删除行末尾的多余空白字符
-    "cortex-debug.variableUseNaturalFormat": false,
+    "cortex-debug.variableUseNaturalFormat": true,
     "idf.portWin": "COM5",
     "C_Cpp.autocomplete": "default",
     "editor.tabSize": 4,
@@ -69,5 +69,6 @@
         "editor.insertSpaces": false,
         "editor.tabSize": 8
     },
-    "iis.configDir": ""
+    "iis.configDir": "",
+    "terminal.integrated.scrollback": 10000
 }
